Add ConsumerArea component and consume dietary requirements endpoint

--- a/client/src/components/UserTypeSelect/UserTypeSelect.scss
+++ b/client/src/components/UserTypeSelect/UserTypeSelect.scss
@@ -2,10 +2,7 @@
 
 .component {
   &_user-select {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, 50%);
+    @include center();
 
     &-title {
       color: $secondary-color;
