--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -28,6 +28,29 @@ ul {
   padding: 0;
 }
 
+.form {
+  &_field {
+    margin-bottom: 1rem;
+
+    &-label {
+      color: $grey;
+      display: block;
+      font-size: 1rem;
+      font-weight: 100;
+      margin-bottom: .5rem;
+    }
+
+    &-input {
+      font-size: 2rem;
+      font-weight: 100;
+      color: $secondary-color;
+      border: 1px solid $grey;
+      padding: .5rem .75rem;
+      outline: 0;
+    }
+  }
+}
+
 button {
   border: none;
   font-weight: 600;
