--- a/client/src/styles/_mixins.scss
+++ b/client/src/styles/_mixins.scss
@@ -1,39 +1,6 @@
-@mixin grid-borders($factor) {
-  $factorIndex0: $factor - 1;
-  $totalBlocks: $factor * $factor;
-
-  width: calc(100%/#{$factor});
-  height: calc(100%/#{$factor});
-
-  // top edge borders
-  @for $i from 1 through $factor
-  {
-    &:nth-child(#{$i}) {
-      border-top: none;
-    }
-  }
-
-  // left edge borders
-  @for $i from 0 through $factorIndex0
-  {
-    &:nth-child(#{($i * $factor) + 1}) {
-      border-left: none;
-    }
-  }
-
-  // right edge borders
-  @for $i from 1 through $factor
-  {
-    &:nth-child(#{$i * $factor}) {
-      border-right: none;
-    }
-  }
-
-  // bottom edge borders
-  @for $i from ($totalBlocks - $factorIndex0) through $totalBlocks
-  {
-    &:nth-child(#{$i}) {
-      border-bottom: none;
-    }
-  }
+@mixin center() {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 50%);
 }
